@@ -163,15 +163,17 @@ enum SpeakClasses
 	SPEAK_SAY		= 0x01,
 	SPEAK_WHISPER		= 0x02,
 	SPEAK_YELL		= 0x03,
-	SPEAK_PRIVATE_PN	= 0x04,
-	SPEAK_PRIVATE_NP	= 0x05,
-	SPEAK_PRIVATE		= 0x06,
+	SPEAK_PRIVATE_FROM	= 0x04,
+	SPEAK_PRIVATE_TO	= 0x05,
+	SPEAK_CHANNEL_W		= 0x06, //?
 	SPEAK_CHANNEL_Y		= 0x07,
-	SPEAK_CHANNEL_W		= 0x08,
-	SPEAK_BROADCAST		= 0x09,
-	SPEAK_CHANNEL_R1        = 0x0A, //red - #c text
-	SPEAK_PRIVATE_RED       = 0x0B, //@name@text
-	SPEAK_CHANNEL_O         = 0x0C,
+	SPEAK_CHANNEL_O		= 0x08,
+	SPEAK_PRIVATE_PN	= 0x0A,
+	SPEAK_PRIVATE_NP	= 0x0B,
+	SPEAK_BROADCAST		= 0x0C,
+	SPEAK_CHANNEL_R1        = 0x0D, //red - #c text
+	SPEAK_PRIVATE_RED_FROM	= 0x0E, //@name@text
+	SPEAK_PRIVATE_RED_TO	= 0x0F, //@name@text
 	SPEAK_MONSTER_SAY	= 0x22,
 	SPEAK_MONSTER_YELL	= 0x23,
 
@@ -570,10 +572,10 @@ const int violationReasons[6] =
 #define CHANNEL_PARTY 0x01
 #define CHANNEL_TUTOR 0x02
 #define CHANNEL_WORLDCHAT 0x03
+#define CHANNEL_GAMEMASTER 0x04
 #define CHANNEL_ADVERTISING 0x05
 #define CHANNEL_ADVERTISINGROOKGAARD 0x06
-#define CHANNEL_GAMEMASTER 0x07
-#define CHANNEL_HELP 0x09
+#define CHANNEL_HELP 0x07
 #define CHANNEL_PRIVATE 0xFFFF
 
 //Reserved player storage key ranges
