@@ -254,17 +254,22 @@ CONST_ANI_NONE = 255
 TALKTYPE_SAY = 1
 TALKTYPE_WHISPER = 2
 TALKTYPE_YELL = 3
-TALKTYPE_PRIVATE_PN = 4
-TALKTYPE_PRIVATE_NP = 5
-TALKTYPE_PRIVATE = 6
+TALKTYPE_PRIVATE_FROM = 4
+TALKTYPE_PRIVATE_TO = 5
+TALKTYPE_CHANNEL_W = 6
 TALKTYPE_CHANNEL_Y = 7
-TALKTYPE_CHANNEL_W = 8
-TALKTYPE_BROADCAST = 9
-TALKTYPE_CHANNEL_R1 = 10
-TALKTYPE_PRIVATE_RED = 11
-TALKTYPE_CHANNEL_O = 12
+TALKTYPE_CHANNEL_O = 8
+TALKTYPE_PRIVATE_PN = 10
+TALKTYPE_PRIVATE_NP = 11
+TALKTYPE_BROADCAST = 12
+TALKTYPE_CHANNEL_R1 = 13
+TALKTYPE_PRIVATE_RED_FROM = 14
+TALKTYPE_PRIVATE_RED_TO = 15
 TALKTYPE_ORANGE_1 = 34
 TALKTYPE_ORANGE_2 = 35
+
+TALKTYPE_PRIVATE = TALKTYPE_PRIVATE_TO
+TALKTYPE_PRIVATE_RED = TALKTYPE_PRIVATE_RED_TO
 
 -- for internal use
 TALKTYPE_RVR_CHANNEL = 256
